--- a/Tj/src/main/resources/static/index.html
+++ b/Tj/src/main/resources/static/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/util.js"></script>
     <title>main</title>
 </head>
 <body>
 <div>
+    <span> 新建：</span>
     <select id="select">
+        <option value="00" selected></option>
         <optgroup label="项目">
             <option value="02">新增员工</option>
             <option value="03">记录</option>
@@ -16,7 +19,7 @@
         <option value="01">打卡</option>
     </select>
     <div id="01">
-        <form id="day_records" method="POST" action="/save/day_records">
+        <form id="day_records" method="POST" action="/save/day_records" onsubmit="return false;">
             <table>
                 <tr>
                     <td>创建人</td><td><input  name="createdBy" type="text"/></td>
@@ -43,14 +46,14 @@
                     <td>备注金额</td><td><input  name="notePay" type="text"/></td>
                 </tr>
                 <tr>
-                    <td><input  name="save"" type="submit" value="保存"/></td><td><input  name="reset" type="reset" value="重置"/></td>
+                    <td><input  name="save"" type="submit" value="保存" onclick="fsave('#01')"/></td><td><input  name="reset" type="reset" value="重置"/></td>
                 </tr>
             </table>
         </form>
     </div>
 
     <div id="02">
-        <form id="emplyees" method="POST" action="/save/emplyees">
+        <form id="emplyees" method="POST" action="/save/emplyees" onsubmit="return false;">
             <table>
                 <tr>
                     <td>创建人</td><td><input  name="createdBy" type="text"/></td>
@@ -80,13 +83,13 @@
                     <td>籍贯</td><td><input  name="emplAddr" type="text"/></td>
                 </tr>
                 <tr>
-                    <td><input  name="save"" type="submit" value="保存"/></td><td><input  name="reset" type="reset" value="重置"/></td>
+                    <td><input  name="save"" type="submit" value="保存" onclick="fsave('#02')"/></td><td><input  name="reset" type="reset" value="重置"/></td>
                 </tr>
             </table>
         </form>
     </div>
     <div id="03">
-        <form id="emplyees_record" method="POST" action="/save/emplyees_record">
+        <form id="emplyees_record" method="POST" action="/save/emplyees_record" onsubmit="return false;">
             <table>
                 <tr>
                     <td>创建人</td><td><input  name="createdBy" type="text"/></td>
@@ -110,13 +113,13 @@
                     <td>在该项目天数</td><td><input  name="days" type="text"/></td>
                 </tr>
                 <tr>
-                    <td><input  name="save"" type="submit" value="保存"/></td><td><input  name="reset" type="reset" value="重置"/></td>
+                    <td><input  name="save"" type="submit" value="保存" onclick="fsave('#03')"/></td><td><input  name="reset" type="reset" value="重置"/></td>
                 </tr>
             </table>
         </form>
     </div>   
     <div id="04">
-        <form id="work_programs" method="POST" action="/save/work_programs">
+        <form id="work_programs" method="POST" action="/save/work_programs" onsubmit="return false;">
             <table>
                 <tr>
                     <td>创建人</td><td><input  name="createdBy" type="text"/></td>
@@ -170,7 +173,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><input  name="save" type="submit" value="保存"/></td><td><input  name="reset" type="reset" value="重置"/></td>
+                    <td><input  name="save" type="button" value="保存" onclick="javascript:fsave('#04')"/></td><td><input  name="reset" type="reset" value="重置"/></td>
                 </tr>
             </table>
         </form>
@@ -180,21 +183,32 @@
             $('#select option').each(function(){
                     iid='#'+$(this).val();
                     $(iid).css({"display": "none","visibility": "hidden"});
-                });
+            });
+            // $("#select selected")
             $("#select").on("change",function(){
+                _id$List=["#01","#02","#03","#04"];
+                /**
                 $('#select option').each(function(){
                     iid='#'+$(this).val();
                     $(iid).css({"display": "none","visibility": "hidden"});
-                });
+                });**/
                 id='#'+$(this).val();
-                $(id).css({"display": "block","visibility": "visible"});
+                for(i=0;i<_id$List.length;i++){
+                    _id=_id$List[i];
+                    if(id==_id){
+                        $(_id).css({"display": "block","visibility": "visible"});
+                    }else{
+                        $(_id).css({"display": "none","visibility": "hidden"});
+                    }
+                }
             });
             // console.log(getData("04"));
         };
         function getData(n,ismap=false){
             var str="";
+            w=n.indexOf("#")!=-1?n:"#"+n;
             // var map=new Map();
-            $("#"+n).find(":input").each(function(i,e){
+            $(w).find(":input").each(function(i,e){
                 if(e.getAttribute("type")=="submit"||e.getAttribute("type")=="reset"){
                     return;
                 }
@@ -205,11 +219,14 @@
             });
             // console.log(map);
             return str.substring(0,str.length-1);
-        
         }
-        // $("input[type=='submit']").on("click",function(){
-            
-        // });
+        function fsave(d){
+            urls=["/save/day_records","/save/emplyees","save/emplyees_record","/save/work_programs"];
+            var _data=getData(d);
+            s=d.substr(2,1);
+            i=parseInt(s);
+            RequestSend("post",_data,urls[i]);
+        }
     </script>
 </div>
 </body>
