完成所有实体类的插入和所有实体类的查询展示功能

--- a/Tj/src/main/resources/static/prog_list.html
+++ b/Tj/src/main/resources/static/prog_list.html
@@ -2,14 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="../js/jquery-3.4.1.min.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/vue.js"></script>
     <title>项目列表</title>
+    <style>
+      .table-list{
+          /* color:black; */
+          border-collapse:collapse;
+          border:1px black solid;
+      }
+      .table-list tr{
+        border: 1px gray solid;
+        table-layout: fixed;
+      }
+      .table-list tr td{
+        border: 1px gray solid;
+      }
+    </style>
 </head>
 <body>
+  <div>查询列表展示界面</div>
     <div>
-            <div>
-                
+        <select id="showlist">
+          <option value="01" selected>打卡列表</option>
+          <option value="02">员工列表</option>
+          <option value="03">记录列表</option>
+          <option value="04">项目列表</option>
+        </select>
+    </div>
+    <div>
+          <div>
+              <input type="button" value="删除"  onclick="del()">
+               <div id="table">
+                  <table class="table-list" cellpadding="10">
+                    <tr v-for="item in tableData" :key="item.id">
+                      <td><input type="checkbox" :name="item.name" :value="item.id"/></td>
+                      <td v-for="(v,k,i) in item" v-if="i!=0">{{v}}</td>
+                      <!-- <td>{{item.date}}</td>
+                      <td>{{item.name}}</td>
+                      <td>{{item.address}}</td> -->
+                      <td><button :id="item.id" :value="item.id" onclick="zclick(this)">edit</button></td>
+                      <td><button :id="item.id" :value="item.id" onclick="zclick(this)">delete</button></td>
+                      </tr>
+                  </table>
+                  <input type="button" value="上一页" sgin="previous" onclick="changePage(this)"><input type="button" value="下一页" sgin="next" onclick="changePage(this)">
+               </div>
             </div>
     </div>
+    <script src="js/common/page_list.js"></script>
+    <script>
+      window.onload=function(){
+        urls=["/all/dayrecord","/all/empl","/all/emplrecord","/all/wrokprogram"];
+        getList(urls[0]);
+        $("#showlist").on("change",function(){
+          var s=this.value;
+          s01=s.substr(1,1);
+          i=parseInt(s01);
+          v.$data.pages.current=0;
+          getList(urls[i-1]);
+        });
+        function getList(vurl){
+          $.ajax({
+          url:vurl,
+          method:"get",
+          data:null,
+          success:function(resp){
+            if(resp.msg=="查询失败!"){
+                alert(resp.msg);
+                return;
+            }
+            // alert(resp.msg);
+            v.$data.tableData=resp.vdata;
+          },
+          error:function(resp){
+              alert(resp);
+          }
+        })
+        }
+      }
+    </script>
 </body>
 </html>
