--- a/Tj/src/main/resources/static/index.html
+++ b/Tj/src/main/resources/static/index.html
@@ -6,10 +6,13 @@
     <h1>welcome Anybody!</h1>
     <ol>
         <li>
-            <a href="/add">项目添加</a>
+            <a href="/add">添加</a>
         </li>
         <li>
-            <a href="/proglist">员工列表</a>
+            <a href="/proglist">浏览</a>
+        </li>
+        <li>
+            <a href="/query">查询</a>
         </li>
     </ol>
 </body>
