--- a/Tj/src/main/resources/static/prog_list.html
+++ b/Tj/src/main/resources/static/prog_list.html
@@ -82,7 +82,7 @@
           s01=s.substr(1,1);
           i=parseInt(s01);
           v.$data.pages.current=0;
-          v.$data.vindex=i;
+          datas.vindex=2;//id
           datas.currentUrl=urls[i-1];
           getList(urls[i-1]);
           da=pageDataJson();
